WebCore/rendering/InlineTextBox.cpp
@@ -1085,10 +1085,11 @@ unsigned InlineTextBox::caretMaxRenderedOffset() const
 
 int InlineTextBox::textPos() const
 {
+    // When computing the width of a text run, RenderBlock::computeInlineDirectionPositionsForLine() doesn't include the actual offset
+    // from the containing block edge in its measurement. textPos() should be consistent so the text are rendered in the same width.
     if (logicalLeft() == 0)
         return 0;
-    RenderBlock* blockElement = renderer()->containingBlock();
-    return logicalLeft() - blockElement->borderStart() - blockElement->paddingStart();
+    return logicalLeft() - root()->logicalLeft();
 }
 
 int InlineTextBox::offsetForPosition(int lineOffset, bool includePartialGlyphs) const
