WebCore/rendering/InlineTextBox.h
@@ -119,7 +119,7 @@ public:
 private:
     virtual unsigned caretMaxRenderedOffset() const;
 
-    int textPos() const;
+    int textPos() const; // returns the x position relative to the left start of the text line.
 
 public:
     virtual int offsetForPosition(int x, bool includePartialGlyphs = true) const;
